--- a/src/app/layout/layouts/admin/admin.component.html
+++ b/src/app/layout/layouts/admin/admin.component.html
@@ -12,14 +12,14 @@
         [navigation]="navigation"
         [mode]="isScreenSmall ? 'over' : 'side'"
         [opened]="!isScreenSmall"
-        class="text-secondary bg-surface md:!bg-transparent"
+        class="text-secondary bg-surface"
       >
       </vertical-navigation>
     </div>
     <!-- Main -->
     <div class="flex-grow">
-      <div class="h-full p-6 overflow-auto" scrollReset>
-        <div class="font-medium text-2xl w-full mb-4">
+      <div class="h-full p-4 md:p-6 overflow-auto" scrollReset>
+        <div class="font-medium text-2xl w-full mb-6 max-w-5xl mx-auto">
           <app-breadcrumb></app-breadcrumb>
         </div>
         <router-outlet *ngIf="true"></router-outlet>
