--- a/src/app/layout/layouts/admin/components/header/header.component.html
+++ b/src/app/layout/layouts/admin/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex px-4 h-14"
+  class="flex px-4 h-14 bg-surface border-0 border-b border-solid border-light"
 >
   <div class="flex justify-center items-center gap-2 pl-2">
     <div class="block md:hidden">
