--- a/src/app/modules/admin/home/home.component.html
+++ b/src/app/modules/admin/home/home.component.html
@@ -1,8 +1,1 @@
-<div class="w-full mx-auto max-w-7xl">
-  <div class="font-medium text-2xl">
-    {{
-      "Home.Welcome"
-        | translate : { name: userService.currentUserValue?.fullName }
-    }}
-  </div>
-</div>
+<div class="w-full mx-auto max-w-7xl"></div>
